--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p>We're working on something amazing. Stay tuned!</p>
 
         <!-- Contact Information -->
-        <p>For inquiries, email us at: <a href="mailto:contact@yourdomain.com">contact@yourdomain.com</a></p>
+        <p>For inquiries, email us at: <a href="mailto:hello@aexd.in">hello@aexd.in</a></p>
 
         <!-- Subscription Form -->
         <div class="subscription">
