--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
         <p class="text-lg mt-2">Configuration Consultant | SaaS | US Healthcare</p>
         
         <div class="mt-4 flex space-x-4">
-            <a href="www.linkedin.com/in/dinildk" class="text-claret hover:underline">LinkedIn</a>
-            <a href="#" class="text-claret hover:underline">GitHub</a>
-            <a href="https://www.instagram.com/dinildk/" class="text-claret hover:underline">Instagram</a>
+            <a href="https://www.linkedin.com/in/dinildk" class="text-claret hover:underline" target="_blank">LinkedIn</a>
+            <a href="#" class="text-claret hover:underline" target="_blank">GitHub</a>
+            <a href="https://www.instagram.com/dinildk/" class="text-claret hover:underline" target="_blank">Instagram</a>
         </div>
         
         <div class="mt-6">
