--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
         
         <div class="mt-6">
-            <a href="docs/CV.pdf" class="text-claret font-semibold hover:underline" target="_blank">View My CV</a>
+            <a href="docs/NOCV.pdf" class="text-claret font-semibold hover:underline" target="_blank">View My CV</a>
         </div>
     </div>
     
