--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
 </head>
 <body class="bg-alabaster text-onyx flex flex-col justify-between min-h-screen">
     <div class="flex flex-col items-center justify-center flex-grow p-6 relative">
-        <img src="images/DuoCharacter.jpg" alt="Character Image" class="w-48 h-48 rounded-full mb-4">
+        <img src="images/DuoCharacter.jpg" alt="Character Image" class="w-52 h-52 rounded-full mb-4">
         <h1 class="text-4xl font-bold">Dinil Kumar D K</h1>
         <p class="text-lg mt-2">Configuration Consultant | SaaS | US Healthcare</p>
         
         <div class="mt-4 flex space-x-4">
-            <a href="https://www.linkedin.com/in/dinildk" class="text-claret hover:underline">LinkedIn</a>
-            <a href="#" class="text-claret hover:underline">GitHub</a>
-            <a href="https://www.instagram.com/dinildk/" class="text-claret hover:underline">Instagram</a>
+            <a href="https://www.linkedin.com/in/dinildk" class="text-claret hover:underline" target="_blank">LinkedIn</a>
+            <a href="#" class="text-claret hover:underline" target="_blank">GitHub</a>
+            <a href="https://www.instagram.com/dinildk/" class="text-claret hover:underline" target="_blank">Instagram</a>
         </div>
         
         <div class="mt-6">
