--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 </head>
 <body class="bg-alabaster text-onyx flex flex-col justify-between min-h-screen">
     <div class="flex flex-col items-center justify-center flex-grow p-6 relative">
-        <img src="images/DuoCharacter.jpg" alt="Character Image" class="w-52 h-52 rounded-full mb-4">
+        <img src="images/NotionDP.jpg" alt="Notion Theme Profile Image" class="w-52 h-52 rounded-full mb-4">
         <h1 class="text-4xl font-bold">Dinil Kumar D K</h1>
         <p class="text-lg mt-2">Configuration Consultant | SaaS | US Healthcare</p>
         
